# backend/YAESandBox.API.Services/InterFaceAndBasic/INotifierService.cs
@@ -10,15 +10,6 @@ namespace YAESandBox.API.Services.InterFaceAndBasic;
 public interface INotifierService
 {
     /// <summary>
-    /// 发送Block状态更新到前端
-    /// 收到这个讯号以后建议做一次全量更新
-    /// </summary>
-    /// <param name="blockId"></param>
-    /// <param name="newStatusCode"></param>
-    /// <returns></returns>
-    Task NotifyBlockStatusUpdateAsync(string blockId, BlockStatusCode newStatusCode);
-
-    /// <summary>
     /// 发送Block的状态更新到前端
     /// </summary>
     /// <param name="blockId">发生改变的block</param>
@@ -28,35 +19,23 @@ public interface INotifierService
     Task NotifyBlockUpdateAsync(string blockId, IEnumerable<BlockDataFields> changedFields, IEnumerable<string> changedEntityIds);
 
     /// <inheritdoc cref="NotifyBlockUpdateAsync(string,IEnumerable{BlockDataFields},IEnumerable{string})"/>
-    Task NotifyBlockUpdateAsync(string blockId, params string[] changedEntityIds)
-    {
-        return this.NotifyBlockUpdateAsync(blockId, [BlockDataFields.WorldState], changedEntityIds);
-    }
+    Task NotifyBlockUpdateAsync(string blockId, params string[] changedEntityIds) =>
+        this.NotifyBlockUpdateAsync(blockId, [BlockDataFields.WorldState], changedEntityIds);
 
     /// <inheritdoc cref="NotifyBlockUpdateAsync(string,IEnumerable{BlockDataFields},IEnumerable{string})"/>
-    Task NotifyBlockUpdateAsync(string blockId, IEnumerable<string> changedEntityIds)
-    {
-        return this.NotifyBlockUpdateAsync(blockId, [BlockDataFields.WorldState], changedEntityIds);
-    }
+    Task NotifyBlockUpdateAsync(string blockId, IEnumerable<string> changedEntityIds) =>
+        this.NotifyBlockUpdateAsync(blockId, [BlockDataFields.WorldState], changedEntityIds);
 
     /// <inheritdoc cref="NotifyBlockUpdateAsync(string,IEnumerable{BlockDataFields},IEnumerable{string})"/>
-    Task NotifyBlockUpdateAsync(string blockId, params BlockDataFields[] changedFields)
-    {
-        return this.NotifyBlockUpdateAsync(blockId, changedFields, []);
-    }
+    Task NotifyBlockUpdateAsync(string blockId, params BlockDataFields[] changedFields) =>
+        this.NotifyBlockUpdateAsync(blockId, changedFields, []);
 
     /// <inheritdoc cref="NotifyBlockUpdateAsync(string,IEnumerable{BlockDataFields},IEnumerable{string})"/>
     [Obsolete("最好不要使用这个，而是写清楚所有的发生改变的字段", true)]
-    Task NotifyBlockUpdateAsync(string blockId)
-    {
-        return this.NotifyBlockUpdateAsync(blockId, [], []);
-    }
-    
+    Task NotifyBlockUpdateAsync(string blockId) => this.NotifyBlockUpdateAsync(blockId, [], []);
+
     /// <inheritdoc cref="NotifyBlockUpdateAsync(string,IEnumerable{BlockDataFields},IEnumerable{string})"/>
-    Task NotifyBlockUpdateAllAsync(string blockId)
-    {
-        return this.NotifyBlockUpdateAsync(blockId, [], []);
-    }
+    Task NotifyBlockUpdateAllAsync(string blockId) => this.NotifyBlockUpdateAsync(blockId, [], []);
 
     /// <summary>
     /// 发送Block的细节更新到前端
@@ -66,11 +45,20 @@ public interface INotifierService
     /// <returns></returns>
     [Obsolete("目前我们不使用这个玩意，而是只通知可能发生变更的Block。", true)]
     Task NotifyBlockDetailUpdateAsync(string blockId, params BlockDetailFields[] changedFields);
-    
+
     /// <summary>
     /// 检测到指令冲突就发送这个通知
     /// </summary>
     /// <param name="conflict"></param>
     /// <returns></returns>
     Task NotifyConflictDetectedAsync(ConflictDetectedDto conflict);
+
+    /// <summary>
+    /// 发送Block状态更新到前端
+    /// 收到这个讯号以后建议做一次全量更新
+    /// </summary>
+    /// <param name="blockId"></param>
+    /// <param name="newStatusCode"></param>
+    /// <returns></returns>
+    Task NotifyBlockStatusUpdateAsync(string blockId, BlockStatusCode newStatusCode);
 }
